--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h1.
-        User List
+        User List in host XXXX
     ul
         each user, i in userlist
             li #{user.username} : #{user.email}
